--- a/contact.html
+++ b/contact.html
@@ -397,7 +397,6 @@
                 <div class="logo">
                     <a href="index.html" style="text-decoration: none; color: inherit;">
                         <h1>¡Hola Japón!</h1>
-                        <span class="logo-subtitle">本物の日本</span>
                     </a>
                 </div>
 
@@ -687,166 +686,115 @@
     <footer class="footer">
         <div class="container">
             <div class="footer-content">
-                <!-- Footer Top -->
-                <div class="footer-top">
-                    <div class="footer-section">
-                        <div class="footer-logo">
-                            <h3>¡Hola Japón!</h3>
-                            <span class="footer-logo-subtitle">本物の日本</span>
-                        </div>
-                        <p class="footer-description">
-                            <span class="es-text">Tu puerta de entrada a la auténtica cultura japonesa. Descubre productos únicos, aprende sobre tradiciones milenarias y sumérgete en el fascinante mundo del anime y manga.</span>
-                            <span class="ja-text">本物の日本文化への入り口。ユニークな商品を発見し、何千年もの伝統について学び、アニメとマンガの魅力的な世界に浸ってください。</span>
-                        </p>
-                        <div class="footer-social">
-                            <a href="#" class="social-link" aria-label="Instagram">
-                                <i class="fab fa-instagram"></i>
-                            </a>
-                            <a href="#" class="social-link" aria-label="Twitter">
-                                <i class="fab fa-twitter"></i>
-                            </a>
-                            <a href="#" class="social-link" aria-label="Facebook">
-                                <i class="fab fa-facebook"></i>
-                            </a>
-                            <a href="#" class="social-link" aria-label="YouTube">
-                                <i class="fab fa-youtube"></i>
-                            </a>
-                            <a href="#" class="social-link" aria-label="TikTok">
-                                <i class="fab fa-tiktok"></i>
-                            </a>
-                        </div>
-                    </div>
-
-                    <div class="footer-section">
-                        <h4 class="footer-title">
-                            <span class="es-text">Productos</span>
-                            <span class="ja-text">商品</span>
-                        </h4>
-                        <ul class="footer-links">
-                            <li><a href="products.html#anime" class="footer-link">
-                                <span class="es-text">Figuras de Anime</span>
-                                <span class="ja-text">アニメフィギュア</span>
-                            </a></li>
-                            <li><a href="products.html#manga" class="footer-link">
-                                <span class="es-text">Manga</span>
-                                <span class="ja-text">マンガ</span>
-                            </a></li>
-                            <li><a href="products.html#ropa" class="footer-link">
-                                <span class="es-text">Ropa Japonesa</span>
-                                <span class="ja-text">和服</span>
-                            </a></li>
-                            <li><a href="products.html#accesorios" class="footer-link">
-                                <span class="es-text">Accesorios</span>
-                                <span class="ja-text">アクセサリー</span>
-                            </a></li>
-                            <li><a href="products.html#comida" class="footer-link">
-                                <span class="es-text">Comida Japonesa</span>
-                                <span class="ja-text">日本料理</span>
-                            </a></li>
-                        </ul>
-                    </div>
-
-                    <div class="footer-section">
-                        <h4 class="footer-title">
-                            <span class="es-text">Cultura</span>
-                            <span class="ja-text">文化</span>
-                        </h4>
-                        <ul class="footer-links">
-                            <li><a href="blog.html#anime" class="footer-link">
-                                <span class="es-text">Guías de Anime</span>
-                                <span class="ja-text">アニメガイド</span>
-                            </a></li>
-                            <li><a href="blog.html#cultura" class="footer-link">
-                                <span class="es-text">Tradiciones</span>
-                                <span class="ja-text">伝統</span>
-                            </a></li>
-                            <li><a href="blog.html#gastronomia" class="footer-link">
-                                <span class="es-text">Gastronomía</span>
-                                <span class="ja-text">グルメ</span>
-                            </a></li>
-                            <li><a href="blog.html#viajes" class="footer-link">
-                                <span class="es-text">Viajes a Japón</span>
-                                <span class="ja-text">日本旅行</span>
-                            </a></li>
-                        </ul>
-                    </div>
-
-                    <div class="footer-section">
-                        <h4 class="footer-title">
-                            <span class="es-text">Empresa</span>
-                            <span class="ja-text">会社</span>
-                        </h4>
-                        <ul class="footer-links">
-                            <li><a href="about.html" class="footer-link">
-                                <span class="es-text">Sobre Nosotros</span>
-                                <span class="ja-text">私たちについて</span>
-                            </a></li>
-                            <li><a href="contact.html" class="footer-link">
-                                <span class="es-text">Contacto</span>
-                                <span class="ja-text">お問い合わせ</span>
-                            </a></li>
-                            <li><a href="#" class="footer-link">
-                                <span class="es-text">Envíos</span>
-                                <span class="ja-text">配送</span>
-                            </a></li>
-                            <li><a href="#" class="footer-link">
-                                <span class="es-text">Devoluciones</span>
-                                <span class="ja-text">返品</span>
-                            </a></li>
-                            <li><a href="#" class="footer-link">
-                                <span class="es-text">Política de Privacidad</span>
-                                <span class="ja-text">プライバシーポリシー</span>
-                            </a></li>
-                        </ul>
-                    </div>
-
-                    <div class="footer-section">
-                        <h4 class="footer-title">
-                            <span class="es-text">Newsletter</span>
-                            <span class="ja-text">ニュースレター</span>
-                        </h4>
-                        <p class="newsletter-description">
-                            <span class="es-text">Recibe las últimas noticias sobre cultura japonesa y ofertas exclusivas.</span>
-                            <span class="ja-text">日本文化の最新ニュースと限定オファーを受け取りましょう。</span>
-                        </p>
-                        <form class="newsletter-form" id="footer-newsletter">
-                            <div class="newsletter-input-group">
-                                <input 
-                                    type="email" 
-                                    class="newsletter-input" 
-                                    placeholder="tu@email.com"
-                                    data-placeholder-es="tu@email.com"
-                                    data-placeholder-ja="メールアドレス"
-                                    required
-                                >
-                                <button type="submit" class="newsletter-btn">
-                                    <i class="fas fa-paper-plane"></i>
-                                </button>
-                            </div>
-                        </form>
+                <div class="footer-section">
+                    <h3 class="footer-title">¡Hola Japón!</h3>
+                    <p class="footer-description">
+                        <span class="es-text">Tu tienda de confianza para productos japoneses auténticos.</span>
+                        <span class="ja-text">本格的な日本製品の信頼できる店舗。</span>
+                    </p>
+                    <div class="social-links">
+                        <a href="#" class="social-link" aria-label="Facebook">
+                            <i class="fab fa-facebook"></i>
+                        </a>
+                        <a href="#" class="social-link" aria-label="Instagram">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                        <a href="#" class="social-link" aria-label="Twitter">
+                            <i class="fab fa-twitter"></i>
+                        </a>
+                        <a href="#" class="social-link" aria-label="YouTube">
+                            <i class="fab fa-youtube"></i>
+                        </a>
                     </div>
                 </div>
 
-                <!-- Footer Bottom -->
-                <div class="footer-bottom">
-                    <div class="footer-copyright">
-                        <p>
-                            <span class="es-text">© 2024 ¡Hola Japón! Todos los derechos reservados.</span>
-                            <span class="ja-text">© 2024 ¡Hola Japón! 全著作権所有。</span>
+                <div class="footer-section">
+                    <h4 class="footer-subtitle">
+                        <span class="es-text">Enlaces Rápidos</span>
+                        <span class="ja-text">クイックリンク</span>
+                    </h4>
+                    <ul class="footer-links">
+                        <li><a href="products.html" class="footer-link">
+                            <span class="es-text">Productos</span>
+                            <span class="ja-text">商品</span>
+                        </a></li>
+                        <li><a href="blog.html" class="footer-link">
+                            <span class="es-text">Blog</span>
+                            <span class="ja-text">ブログ</span>
+                        </a></li>
+                        <li><a href="about.html" class="footer-link">
+                            <span class="es-text">Nosotros</span>
+                            <span class="ja-text">私たちについて</span>
+                        </a></li>
+                        <li><a href="contact.html" class="footer-link">
+                            <span class="es-text">Contacto</span>
+                            <span class="ja-text">お問い合わせ</span>
+                        </a></li>
+                    </ul>
+                </div>
+
+                <div class="footer-section">
+                    <h4 class="footer-subtitle">
+                        <span class="es-text">Categorías</span>
+                        <span class="ja-text">カテゴリー</span>
+                    </h4>
+                    <ul class="footer-links">
+                        <li><a href="products.html?category=figuras" class="footer-link">
+                            <span class="es-text">Figuras</span>
+                            <span class="ja-text">フィギュア</span>
+                        </a></li>
+                        <li><a href="products.html?category=peluches" class="footer-link">
+                            <span class="es-text">Peluches</span>
+                            <span class="ja-text">ぬいぐるみ</span>
+                        </a></li>
+                        <li><a href="products.html?category=manga" class="footer-link">
+                            <span class="es-text">Manga</span>
+                            <span class="ja-text">マンガ</span>
+                        </a></li>
+                        <li><a href="products.html?category=ropa" class="footer-link">
+                            <span class="es-text">Ropa</span>
+                            <span class="ja-text">服</span>
+                        </a></li>
+                    </ul>
+                </div>
+
+                <div class="footer-section">
+                    <h4 class="footer-subtitle">
+                        <span class="es-text">Contacto</span>
+                        <span class="ja-text">お問い合わせ</span>
+                    </h4>
+                    <div class="contact-info">
+                        <p class="contact-item">
+                            <i class="fas fa-envelope"></i>
+                            <span>info@holajapon.com</span>
+                        </p>
+                        <p class="contact-item">
+                            <i class="fas fa-phone"></i>
+                            <span>+52 (55) 1234-5678</span>
+                        </p>
+                        <p class="contact-item">
+                            <i class="fas fa-map-marker-alt"></i>
+                            <span>Ciudad de México, México</span>
                         </p>
                     </div>
-                    <div class="footer-payment">
-                        <span class="payment-text">
-                            <span class="es-text">Métodos de pago seguros:</span>
-                            <span class="ja-text">安全な支払い方法：</span>
-                        </span>
-                        <div class="payment-icons">
-                            <i class="fab fa-cc-visa"></i>
-                            <i class="fab fa-cc-mastercard"></i>
-                            <i class="fab fa-cc-paypal"></i>
-                            <i class="fab fa-apple-pay"></i>
-                            <i class="fab fa-google-pay"></i>
-                        </div>
+                </div>
+            </div>
+
+            <div class="footer-bottom">
+                <div class="footer-bottom-content">
+                    <p class="copyright">
+                        <span class="es-text">&copy; 2024 ¡Hola Japón! Todos los derechos reservados.</span>
+                        <span class="ja-text">&copy; 2024 ¡Hola Japón! すべての権利を保有しています。</span>
+                    </p>
+                    <div class="footer-bottom-links">
+                        <a href="#" class="footer-bottom-link">
+                            <span class="es-text">Política de Privacidad</span>
+                            <span class="ja-text">プライバシーポリシー</span>
+                        </a>
+                        <a href="#" class="footer-bottom-link">
+                            <span class="es-text">Términos de Servicio</span>
+                            <span class="ja-text">利用規約</span>
+                        </a>
                     </div>
                 </div>
             </div>
