--- a/about.html
+++ b/about.html
@@ -1007,6 +1007,10 @@
                             <span class="es-text">Términos de Servicio</span>
                             <span class="ja-text">利用規約</span>
                         </a>
+                        <a href="admin.html" class="footer-bottom-link">
+                            <span class="es-text">Administrador</span>
+                            <span class="ja-text">管理者ログイン</span>
+                        </a>
                     </div>
                 </div>
             </div>
